--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
 
     <name>Undertow Servlet Example</name>
     <description>Undertow Servlet Example for OpenShift Java S2I</description>
+
+    <scm>
+        <connection>scm:git:http://none</connection>
+        <url>scm:git:https://none</url>
+    </scm>       
+
+
     <build>
         <plugins>
             <plugin>
@@ -36,6 +43,31 @@
                 <version>2.3.2</version>
                 <configuration>
                     <showDeprecation>true</showDeprecation>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+                <version>1.3</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>create</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <doCheck>false</doCheck>
+                    <doUpdate>false</doUpdate>
+                    <shortRevisionLength>7</shortRevisionLength>
+                    <revisiononscmfailure>
+                        <format>Build: #{0} ({1,date})</format>
+                        <items>
+                            <item>buildNumber\d*</item>
+                            <item>timestamp</item>
+                        </items>
+                    </revisiononscmfailure>                
                 </configuration>
             </plugin>
         </plugins>
